--- a/index.css
+++ b/index.css
@@ -6,7 +6,7 @@ label {
 input {
     margin-top: 5px;
     margin-bottom: 10px;
-    width: 70%;
+    width: 100%; /* Adjusted width to 100% */
 }
 
 input[type="range"]::-webkit-slider-thumb {
@@ -14,7 +14,7 @@ input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     border-bottom: 1px solid #29334f;
     background: black;
- }
+}
 
 .first, .second {
     display: block;
@@ -23,18 +23,20 @@ input[type="range"]::-webkit-slider-thumb {
 
 .gen {
     display: flex;
+    flex-direction: column; /* Adjusted to column for better mobile display */
     margin: 0 auto;
 }
 
 form {
-    width: 60%;
+    width: 80%; /* Adjusted form width for better mobile display */
     margin: 0 auto;
 }
 
 .end {
     display: flex;
+    flex-direction: column; /* Adjusted to column for better mobile display */
     align-items: center;
-    justify-content: space-between;
+    justify-content: center;
 }
 
 .lab {
@@ -57,7 +59,7 @@ form {
 
 .calc {
     margin: 0 auto;
-    width: 50%;
+    width: 80%; /* Adjusted for better mobile display */
     text-align: center;
-    font-size: 50px;
+    font-size: 30px; /* Adjusted font size for better mobile display */
 }
