--- a/index.css
+++ b/index.css
@@ -98,3 +98,70 @@ input[type="range"]::-webkit-slider-runnable-track {
     height: 1px;
 }
 
+
+.radio-buttons {
+    display: flex;
+    flex-direction: column;
+    
+}
+  
+  .radio-buttons label {
+    display: flex;
+    margin-bottom: 10px;
+  }
+  
+  .radio-buttons input {
+    margin-right: 10px;
+  }
+  
+  .radio-buttons {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start; 
+  }
+  
+  .radio-buttons label {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+  }
+  
+  .radio-buttons input {
+    margin-right: 10px;
+  }
+  
+  .label:nth-child(1) {
+    width: 10%;
+  }
+  
+  .label:nth-child(2) {
+    width: 9.5%;
+  }
+
+
+@media(max-width: 600px) {
+    form {
+        width: 90%;
+    }
+    .calc {
+        font-size: 25px;
+        width: 90%;
+        margin-bottom: 50px;
+    }
+    .lab {
+        font-size: 15px;
+        width: 80%;
+        text-align: start;
+    }
+    label {
+        font-size: 15px;
+    }
+}
+
+@media(max-height: 450px) {
+    .calc {
+        font-size: 25px;
+        width: 50%;
+        margin-bottom: 80px;
+    }
+}
