--- a/index.css
+++ b/index.css
@@ -1,6 +1,12 @@
-label {
+.dd {
     display: block;
-    margin-top: 10px;
+    margin-top: 20px;
+    margin-bottom: 10px;
+    font-size: 25px;
+}
+
+.choose {
+    font-size: 25px;
 }
 
 input {
@@ -59,7 +65,7 @@ form {
     margin: 0 auto;
     width: 50%;
     text-align: center;
-    font-size: 50px;
+    font-size: 65px;
 }
 
 input[type="range"] {
@@ -76,8 +82,8 @@ input[type="range"] {
 input[type="range"]::-webkit-slider-thumb {
     -webkit-appearance: none;
     appearance: none;
-    width: 15px;
-    height: 15px;
+    width: 25px;
+    height: 25px;
     border-radius: 50%;
     background: #150e0e;
     cursor: pointer;
